--- a/client/src/styles/globals.css
+++ b/client/src/styles/globals.css
@@ -1,14 +1,29 @@
+:root {
+  --bg-color: rgb(230, 230, 230);
+  --text-color: rgb(30, 30, 30);
+  --highlight-color: rgb(160, 98, 0);
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --bg-color: rgb(30, 30, 30);
+    --text-color: rgb(185, 185, 185);
+    --highlight-color: rgb(160, 98, 0);
+  }
+}
+
 html,
 body {
+  background-color: var(--bg-color);
+  color: var(--text-color);
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: monospace;
+  font-size: 16px;
 }
 
 a {
   color: inherit;
-  text-decoration: none;
 }
 
 * {
