--- a/client/src/components/Layout/Navbar.module.css
+++ b/client/src/components/Layout/Navbar.module.css
@@ -1,16 +1,13 @@
 .root {
-  display: flex;
-  justify-content: space-between;
-  padding-top: 16px;
-  padding-left: 32px;
-  padding-bottom: 16px;
-  margin-bottom: 16px;
+  padding-left: calc(var(--spacing) * 2);
+  padding-bottom: var(--spacing);
+  margin-top: var(--spacing);
+  margin-bottom: var(--spacing);
   border-bottom: 1px solid var(--highlight-color);
 }
 
-.left > a,
-.right > a {
-  margin-right: 16px;
+.root > a {
+  margin-right: var(--spacing);
 }
 
 .active {
