--- a/client/src/components/Layout/nav-bar.module.css
+++ b/client/src/components/Layout/nav-bar.module.css
@@ -1,5 +1,5 @@
 .root {
-  padding-left: calc(var(--spacing) * 2);
+  padding-left: var(--spacing);
   padding-bottom: var(--spacing);
   margin-top: var(--spacing);
   margin-bottom: var(--spacing);
