--- a/client/src/components/styled-table/styled-table.module.css
+++ b/client/src/components/styled-table/styled-table.module.css
@@ -7,6 +7,10 @@
   text-align: center;
 }
 
+.table tbody tr td:empty::after {
+  content: "\00a0";
+}
+
 .table tbody tr td:first-child {
   text-align: left;
 }
